# knx

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CMakeLists.txt  README.md  address_table_object.cpp  address_table_object.h  apdu.cpp  apdu.h  application_layer.cpp  application_layer.h  application_program_object.cpp  application_program_object.h  association_table_object.cpp  association_table_object.h  bau.cpp  bau.h  bau07B0.cpp  bau07B0.h  bau57B0.cpp  bau57B0.h  bau_systemB.cpp  bau_systemB.h  bits.cpp  bits.h  build_pio.sh  cemi_frame.cpp  cemi_frame.h  data_link_layer.cpp  data_link_layer.h  device_object.cpp  device_object.h  esp_platform.cpp  esp_platform.h  group_object.cpp  group_object.h  group_object_table_object.cpp  (+35 more)
examples/knx-cc1310/: Board.h  CC1310_LAUNCHXL.c  CC1310_LAUNCHXL.h  CC1310_LAUNCHXL_NoRTOS.lds  CC1310_LAUNCHXL_fxns.c  CMakeLists.txt  README.md  RFQueue.h  build.sh  ccfg.c  knx_wrapper.cpp  knx_wrapper.h  main_nortos.c
examples/knx-cc1310/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_Syscalls_GCC.c
examples/knx-cc1310/ccs/: .ccsproject  .cproject  .project  README.md
examples/knx-cc1310/cmake/: FindSimpleLinkCC13X0SDK_nortos.cmake  FindSimpleLinkCC13X0SDKnortos.cmake  binutils-arm-none-eabi.cmake  cc13xx.cmake  efr32mg.cmake  toolchain-arm-none-eabi.cmake
examples/knx-cc1310/coresdk_cc13xx_cc26xx/: LICENSE
examples/knx-cc1310/smartrf_settings/: smartrf_settings.c  smartrf_settings.h
examples/knx-cc1310/vscode/: launch.json.example
examples/knx-demo-diy-idf/: CMakeLists.txt  README.md  sdkconfig
examples/knx-demo-diy-idf/main/: main.cpp
examples/knx-linux/: CMakeLists.txt  fdsk.cpp  fdsk.h  gcc_Debug.h  knx-linux-Debug.vgdbsettings  knx-linux.vcxproj  knx-linux.vcxproj.filters  main.cpp
examples/knx-linux-coupler/: CMakeLists.txt  fdsk.cpp  fdsk.h  knx-linux.vcxproj.filters  main.cpp
examples/knxPython/: CMakeLists.txt  CMakeSettings.json  knxPython-Debug.vgdbsettings  knxPython.vcxproj  knxmodule.cpp  setup.py  write_version_info.py
knx-linux/: CMakeLists.txt  CMakeSettings.json  ClassDiagram.cd  gcc_Release.h  knx-linux-Debug.vgdbsettings  knx-linux-Release.vgdbsettings  knx-linux.vcxproj  knx-linux.vcxproj.filters  main.cpp
src/: CMakeLists.txt  apdu.h  application_program_object.h  arch_config.h  arduino_platform.cpp  arduino_platform.h  association_table_object.cpp  bau57B0.cpp  button.cpp  button.h  cc1310_platform.cpp  cc1310_platform.h  datapoint_types.cpp  esp32_idf_platform.cpp  esp32_idf_platform.h  esp32_platform.cpp  esp32_platform.h  esp_platform.cpp  esp_platform.h  group_object.cpp  interface_object.cpp  knx.h  knx_esp.h  knx_facade.cpp  knx_facade.h  led.cpp  led.h  libretiny_platform.cpp  libretiny_platform.h  linux_platform.cpp  linux_platform.h  main.cpp  nowifistate.cpp  nowifistate.h  npdu.h  programmingmodestate.cpp  programmingmodestate.h  ring_buffer.c  ring_buffer.h  rp2040_arduino_platform.cpp  (+17 more)
src/knx/: address_table_object.cpp  address_table_object.h  aes.h  apdu.cpp  apdu.h  application_layer.cpp  application_layer.h  application_program_object.cpp  application_program_object.h  association_table_object.cpp  association_table_object.h  bau.cpp  bau.h  bau07B0.cpp  bau07B0.h  bau091A.cpp  bau091A.h  bau27B0.cpp  bau27B0.h  bau2920.cpp  bau2920.h  bau57B0.cpp  bau57B0.h  bau_systemB.cpp  bau_systemB.h  bau_systemB_coupler.cpp  bau_systemB_coupler.h  bau_systemB_device.cpp  bau_systemB_device.h  bits.cpp  bits.h  callback_property.cpp  callback_property.h  cemi_frame.cpp  cemi_frame.h  cemi_server.cpp  cemi_server.h  cemi_server_object.cpp  cemi_server_object.h  config.h  (+143 more)
src/knx/app_layer/: apdu.h  application_layer.cpp
src/knx/application_layer/: apdu.cpp  apdu.h  application_layer.cpp  application_layer.h
src/knx/bau/: bau.cpp  bau.h  bau07B0.h  bau091A.cpp  bau27B0.h  bau57B0.cpp  bau_systemB.cpp  bau_systemB.h  bau_systemB_coupler.h  bau_systemB_device.cpp  bau_systemB_device.h
src/knx/cemi_server/: cemi_server.cpp  cemi_server.h  cemi_server_object.cpp  cemi_server_object.h  usb_tunnel_interface.cpp  usb_tunnel_interface.h
src/knx/coupler/: bau091A.cpp  bau091A.h  bau2920.cpp  bau2920.h  bau_systemB_coupler.cpp  bau_systemB_coupler.h  network_layer_coupler.cpp  network_layer_coupler.h  router_object.cpp  router_object.h
src/knx/data_secure/: secure_application_layer.cpp  secure_application_layer.h  security_interface_object.cpp  security_interface_object.h
src/knx/datalink_layer/: cemi_frame.cpp  cemi_frame.h  data_link_layer.cpp  data_link_layer.h
src/knx/group_object/: datapoint_types.cpp  datapoint_types.h  dpt.cpp  dpt.h  dptconvert.cpp  dptconvert.h  group_object.cpp  group_object.h  knx_value.cpp  knx_value.h
src/knx/interface_object/: address_table_object.cpp  address_table_object.h  application_program_object.cpp  application_program_object.h  association_table_object.cpp  association_table_object.h  callback_property.h  data_property.cpp  data_property.h  device_object.cpp  device_object.h  function_property.h  group_object_table_object.cpp  group_object_table_object.h  interface_object.cpp  interface_object.h  property.cpp  property.h  router_object.cpp  table_object.cpp  table_object.h
src/knx/ip/: bau57B0.cpp  bau57B0.h  ip_data_link_layer.cpp  ip_data_link_layer.h  ip_host_protocol_address_information.cpp  ip_host_protocol_address_information.h  ip_parameter_object.cpp  ip_parameter_object.h  knx_ip_ch.cpp  knx_ip_ch.h  knx_ip_config_dib.cpp  knx_ip_config_dib.h  knx_ip_crd.cpp  (+52 more)
src/knxold/: bau2920.h  bau_systemB_coupler.cpp  bits.cpp  data_property.cpp  data_property.h  datapoint_types.h  device_object.h  dpt.cpp  group_object.cpp  ip_host_protocol_address_information.cpp  ip_parameter_object.h  knx_ip_routing_indication.cpp  knx_ip_search_request.cpp  knx_ip_search_request.h  knx_ip_search_response.h  memory.cpp  network_layer_entity.cpp  npdu.h  platform.h  rf_physical_layer_cc1101.cpp  rf_physical_layer_cc1101.h  rf_physical_layer_cc1310.cpp  security_interface_object.cpp  usb_tunnel_interface.cpp
(+884 files in other folders)
