cmake_minimum_required(VERSION 3.16)
project(knx-linux VERSION 1.5)
set(LIBRARIES_FROM_REFERENCES "")

set(SOURCES
knx/address_table_object.cpp
knx/address_table_object.h
knx/apdu.cpp
knx/apdu.h
knx/application_layer.cpp
knx/application_layer.h
knx/application_program_object.cpp
knx/application_program_object.h
knx/association_table_object.cpp
knx/association_table_object.h
knx/bau.cpp
knx/bau.h
knx/bau07B0.cpp
knx/bau07B0.h
knx/bau091A.cpp
knx/bau091A.h
knx/bau27B0.cpp
knx/bau27B0.h
knx/bau2920.cpp
knx/bau2920.h
knx/bau57B0.cpp
knx/bau57B0.h
knx/bau_systemB.cpp
knx/bau_systemB.h
knx/bau_systemB_coupler.cpp
knx/bau_systemB_coupler.h
knx/bau_systemB_device.cpp
knx/bau_systemB_device.h
knx/bits.cpp
knx/bits.h
knx/callback_property.h
knx/cemi_frame.cpp
knx/cemi_frame.h
knx/cemi_server.cpp
knx/cemi_server.h
knx/cemi_server_object.cpp
knx/cemi_server_object.h
knx/config.h
knx/datapoint_types.cpp
knx/datapoint_types.h
knx/data_link_layer.cpp
knx/data_link_layer.h
knx/data_property.cpp
knx/data_property.h
knx/device_object.cpp
knx/device_object.h
knx/dpt.cpp
knx/dpt.h
knx/dptconvert.cpp
knx/dptconvert.h
knx/function_property.h
knx/group_object.cpp
knx/group_object.h
knx/group_object_table_object.cpp
knx/group_object_table_object.h
knx/interface_object.cpp
knx/interface_object.h
knx/ip/ip_data_link_layer.cpp
knx/ip/ip_data_link_layer.h
knx/ip/ip_host_protocol_address_information.cpp
knx/ip/ip_host_protocol_address_information.h
knx/ip/ip_parameter_object.cpp
knx/ip/ip_parameter_object.h
knx/ip/knx_ip_ch.cpp
knx/ip/knx_ip_ch.h
knx/ip/knx_ip_config_dib.cpp
knx/ip/knx_ip_config_dib.h
knx/ip/knx_ip_config_request.cpp
knx/ip/knx_ip_config_request.h
knx/ip/knx_ip_connect_request.cpp
knx/ip/knx_ip_connect_request.h
knx/ip/knx_ip_connect_response.cpp
knx/ip/knx_ip_connect_response.h
knx/ip/knx_ip_crd.cpp
knx/ip/knx_ip_crd.h
knx/ip/knx_ip_cri.cpp
knx/ip/knx_ip_cri.h
knx/ip/knx_ip_description_request.cpp
knx/ip/knx_ip_description_request.h
knx/ip/knx_ip_description_response.cpp
knx/ip/knx_ip_description_response.h
knx/ip/knx_ip_device_information_dib.cpp
knx/ip/knx_ip_device_information_dib.h
knx/ip/knx_ip_dib.cpp
knx/ip/knx_ip_dib.h
knx/ip/knx_ip_disconnect_request.cpp
knx/ip/knx_ip_disconnect_request.h
knx/ip/knx_ip_disconnect_response.cpp
knx/ip/knx_ip_disconnect_response.h
knx/ip/knx_ip_extended_device_information_dib.cpp
knx/ip/knx_ip_extended_device_information_dib.h
knx/ip/knx_ip_frame.cpp
knx/ip/knx_ip_frame.h
knx/ip/knx_ip_knx_addresses_dib.cpp
knx/ip/knx_ip_knx_addresses_dib.h
knx/ip/knx_ip_routing_indication.cpp
knx/ip/knx_ip_routing_indication.h
knx/ip/knx_ip_search_request.cpp
knx/ip/knx_ip_search_request.h
knx/ip/knx_ip_search_request_extended.cpp
knx/ip/knx_ip_search_request_extended.h
knx/ip/knx_ip_search_response.cpp
knx/ip/knx_ip_search_response.h
knx/ip/knx_ip_search_response_extended.cpp
knx/ip/knx_ip_search_response_extended.h
knx/ip/knx_ip_state_request.cpp
knx/ip/knx_ip_state_request.h
knx/ip/knx_ip_state_response.cpp
knx/ip/knx_ip_state_response.h
knx/ip/knx_ip_supported_service_dib.cpp
knx/ip/knx_ip_supported_service_dib.h
knx/ip/knx_ip_tunneling_ack.cpp
knx/ip/knx_ip_tunneling_ack.h
knx/ip/knx_ip_tunneling_info_dib.cpp
knx/ip/knx_ip_tunneling_info_dib.h
knx/ip/knx_ip_tunneling_request.cpp
knx/ip/knx_ip_tunneling_request.h
knx/ip/knx_ip_tunnel_connection.cpp
knx/ip/knx_ip_tunnel_connection.h
knx/ip/service_families.h
knx/knx_types.h
knx/knx_value.cpp
knx/knx_value.h
knx/memory.cpp
knx/memory.h
knx/network_layer.cpp
knx/network_layer.h
knx/network_layer_coupler.cpp
knx/network_layer_coupler.h
knx/network_layer_device.cpp
knx/network_layer_device.h
knx/network_layer_entity.cpp
knx/network_layer_entity.h
knx/npdu.cpp
knx/npdu.h
knx/platform/linux_platform.cpp
knx/platform/linux_platform.h
knx/platform.cpp
knx/platform.h
knx/property.cpp
knx/property.h
knx/rf/rf_data_link_layer.cpp
knx/rf/rf_data_link_layer.h
knx/rf/rf_medium_object.cpp
knx/rf/rf_medium_object.h
knx/rf/rf_physical_layer.h
knx/rf/rf_physical_layer_cc1101.cpp
knx/rf/rf_physical_layer_cc1101.h
knx/rf/rf_physical_layer_cc1310.cpp
knx/rf/rf_physical_layer_cc1310.h
knx/router_object.cpp
knx/router_object.h
knx/save_restore.h
knx/secure_application_layer.cpp
knx/secure_application_layer.h
knx/security_interface_object.cpp
knx/security_interface_object.h
knx/table_object.cpp
knx/table_object.h
knx/tpdu.cpp
knx/tpdu.h
knx/tpuart_data_link_layer.cpp
knx/tpuart_data_link_layer.h
knx/tp_frame.h
knx/transport_layer.cpp
knx/transport_layer.h
knx/usb_tunnel_interface.cpp
knx/usb_tunnel_interface.h
knx/util/aes.c
knx/util/aes.h
knx/util/aes.hpp
knx/util/simple_map.h
knx.h
knx_facade.cpp
knx_facade.h
)


set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -Wno-unknown-pragmas -g -O0")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wno-unknown-pragmas -g -O0")

add_library(knx SHARED ${SOURCES})
target_include_directories(knx PUBLIC .)
set_property(TARGET knx PROPERTY CXX_STANDARD 11)
target_compile_definitions(knx PUBLIC -DUSE_USB -DUSE_CEMI_SERVER 
    -DKNX_TUNNELING=1 -DUSE_DATASECURE)
